[tool.poetry]
name = "react-js-project"
version = "0.1.0"
description = "A project integrating React.js with a Python backend."
package-mode = false
authors = ["Votre Nom <votre.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nodeenv = "^1.7.0"  # Pour intégrer Node.js à l'environnement Poetry

[tool.poetry.dev-dependencies]
pytest = "^7.0"  # Si vous souhaitez tester votre code Python

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"